--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.0",
         "admin-lte": "^3.2.0",
+        "flatpickr": "^4.6.13",
         "laravel-vue-pagination": "^4.1.3",
         "query": "^0.2.0",
         "vee-validate": "^4.12.2",
