--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "admin-lte": "^3.2.0",
         "flatpickr": "^4.6.13",
         "laravel-vue-pagination": "^4.1.3",
+        "pinia": "^2.1.7",
         "query": "^0.2.0",
         "sweetalert2": "^11.10.1",
         "vee-validate": "^4.12.2",
