--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.0",
+        "@vueuse/core": "^10.7.0",
         "admin-lte": "^3.2.0",
         "flatpickr": "^4.6.13",
         "laravel-vue-pagination": "^4.1.3",
